Fixed messages in the #chat pane where text was bottom aligned; moved it to the top.

--- a/public/css/videoChatPlayer.css
+++ b/public/css/videoChatPlayer.css
@@ -413,11 +413,21 @@ input {
 }
 
 .commenter {
+    vertical-align: top;
     font-weight: bolder;
 }
 
 .messagePrefix {
+    vertical-align: top;
     margin-right: 3px;
+}
+
+.chatmessage {
+    vertical-align: top;
+}
+.chatmessage span {
+    display: inline-block;
+    vertical-align: top;
 }
 
 .chat-image-scale-1 {
